--- a/online_shop/e_commerce/templates/e_commerce/home.html
+++ b/online_shop/e_commerce/templates/e_commerce/home.html
@@ -27,8 +27,8 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="{% url 'e-products' 'f' %}">Women</a></li>
-          <li><a href="{% url 'e-products' 'm' %}">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li><a href="{% url 'e-products' 'm' %}">Men</a></li>
+          <li><a href="#">Children</a></li>
         </ul>
       </li>
       <li><a href="#">Page 2</a></li>
