Added new functions

--- a/online_shop/e_commerce/templates/e_commerce/confirm.html
+++ b/online_shop/e_commerce/templates/e_commerce/confirm.html
@@ -18,6 +18,6 @@
  <img src="{% static 'e_commerce/order_Confirmed.jpg' %}" alt="My image">
       <a href="#" class="btn btn-info">Go To Home</a>
       <a href="{% url 'review' %}" class="btn btn-primary">Review Order</a>
-
+<h4>Your order will be delivered to {{address}}</h4>
 </body>
 </html>
