--- a/online_shop/e_commerce/templates/e_commerce/home.html
+++ b/online_shop/e_commerce/templates/e_commerce/home.html
@@ -31,8 +31,8 @@
           <li><a href="#">Children</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Kids</a></li>
+      <li><a href="#">Home & Living</a></li>
     </ul>
   </div>
 </nav>
