--- a/online_shop/e_commerce/templates/e_commerce/cart.html
+++ b/online_shop/e_commerce/templates/e_commerce/cart.html
@@ -26,12 +26,12 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="{% url 'e-products' 'f' %}">Women</a></li>
-          <li><a href="{% url 'e-products' 'm' %}">Page 1-2</a></li>
+          <li><a href="{% url 'e-products' 'm' %}">Men</a></li>
           <li><a href="#">Page 1-3</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Kids</a></li>
+      <li><a href="#">Home & Living</a></li>
     </ul>
   </div>
 </nav>
