--- a/online_shop/e_commerce/templates/e_commerce/products.html
+++ b/online_shop/e_commerce/templates/e_commerce/products.html
@@ -31,8 +31,8 @@
           <li><a href="#">Page 1-3</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Kids</a></li>
+      <li><a href="#">Home & Living</a></li>
     </ul>
   </div>
 </nav>
@@ -62,6 +62,8 @@
       <p class="card-text">{{item.price}}.</p>
 
     <a href="{% url 'add' item.id  %}" class="btn btn-primary">Add to cart</a>
+      <a href="{% url 'get_details' item.id  %}" class="btn btn-info">Show Details</a>
+
 </div>
 </div>
 {% endfor %}
