--- a/online_shop/e_commerce/templates/e_commerce/review.html
+++ b/online_shop/e_commerce/templates/e_commerce/review.html
@@ -26,27 +26,31 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="{% url 'e-products' 'f' %}">Women</a></li>
-          <li><a href="{% url 'e-products' 'm' %}">Page 1-2</a></li>
+          <li><a href="{% url 'e-products' 'm' %}">Men</a></li>
           <li><a href="#">Page 1-3</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Kids</a></li>
+      <li><a href="#">Home & Living</a></li>
     </ul>
   </div>
 </nav>
-<form method="POST" action="">
-    {% csrf_token %}
-{% for item in products %}
 
+{% for item in products %}
+<form method="GET" action="{% url 'get_review' item.id %}" id="review">
+    {% csrf_token %}
     <div class="card">
   <img class="card-img-top" src="{{item.img.url}}" alt="Card image cap" width="50",height="50">
   <div class="card-body">
     <h5 class="card-title">{{item.name}}</h5>
     <p class="card-text">{{item.brand}}.</p>
       <p class="card-text">{{item.price}}.</p>
+      <b>Status: </b><p>{{item.status}}</p>
+    {% if item.status == 'Ordered' %}
 
-
+    <input type="text" name="{{item.id}}">
+    <input class="button" type="submit" value="Add Review">
+    {% endif %}
 
   </div>
 </div>
